# kalman_cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  extended_kalman.cpp  extended_kalman.h  extended_kalman_demo.cpp  kalman.cpp  kalman.h  kalman_demo.cpp  main.cpp  matrix_math.cpp  matrix_math.h  test_matrix.cpp
.github/workflows/: cmake-multi-platform.yml
tests/: CMakeLists.txt  test_extended_kalman.cpp  test_kalman.cpp  test_matrix.cpp
